--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -16,8 +16,9 @@ const metadata = {
 
   <ContactUs
     id="form"
-    title="Drop us a message today!"
-    subtitle="For quicker answers, explore our FAQs section. You may find the solution you're looking  for right there! If not, our support team is delighted to help you."
+    action="https://n.ju.gy/webhook/onpage_form"
+    title="Reach Out to Us!"
+    subtitle="For quick answers, check our FAQs. If you need further assistance, our support team is here to help."
     inputs={[
       {
         type: 'text',
@@ -35,7 +36,7 @@ const metadata = {
     }}
     disclaimer={{
       label:
-        'By submitting this contact form, you acknowledge and agree to the collection of your personal information.',
+        'By submitting this form, you consent to the collection of your information as per our Privacy Policy.',
     }}
     description="Our support team typically responds within 24 business hours."
   />
@@ -43,35 +44,35 @@ const metadata = {
   <!-- Features2 Widget ************** -->
 
   <Features2
-    title="We are here to help!"
+    title="How Can We Assist You?"
     items={[
       {
-        title: 'General support',
-        description: `Chat with us for inquiries related to account management, website navigation, payment issues, accessing purchased templates or general questions about the website's functionality.`,
+        title: 'General Support',
+        description: `For help with account management, navigating our site, or general questions, feel free to reach out.`,
       },
       {
-        title: 'Contact sales',
+        title: 'Sales Inquiries',
         description:
-          'Chat with us for questions about purchases, customization options, licensing for commercial use, inquiries about specific template, etc.',
+          'Contact us for questions about purchases, customization options, or commercial licensing details.',
       },
       {
-        title: 'Technical support',
+        title: 'Technical Assistance',
         description:
-          'Chat with us when facing issues like template installation, problems editing difficulties, compatibility issues with software or download errors, or other technical challenges related to using the templates.',
+          'Need help with installation or experiencing compatibility issues? Our technical team is here to assist.',
       },
       {
         title: 'Phone',
-        description: '+1 (234) 567-890',
+        description: '+965 4105 06XX (WhatsApp)',
         icon: 'tabler:headset',
       },
       {
         title: 'Email',
-        description: 'contact@support.com',
+        description: 'support[@]onpage.ai',
         icon: 'tabler:mail',
       },
       {
         title: 'Location',
-        description: '1234 Lorem Ipsum St, 12345, Miami, EEUU',
+        description: 'Mu3lnen LLC, Kuwait',
         icon: 'tabler:map-pin',
       },
     ]}
