--- a/src/components/widgets/Announcement.astro
+++ b/src/components/widgets/Announcement.astro
@@ -10,7 +10,7 @@
     >NEW</span
   >
   <a href="https://astro.build/blog/astro-4150/" class="text-muted hover:underline dark:text-slate-400 font-medium"
-    >Astro 4.15 is now available! »</a
+    >Onpage 2.5.4 is now available! »</a
   >
   <a
     target="_blank"
